# sparse-bregman

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
src/: .gitignore  artefacts.dvc  eval.py  main.py
src/data/: .gitignore  shapenetpart_hdf5_2048.dvc
src/sparse_bregman/: data.py  decoder.py  encoder.py  loss.py  models.py  optim.py  utils.py
